--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   retrofit: ^4.0.1
   dio: ^5.3.2
   get: ^4.6.5
+  shared_preferences: ^2.2.0
+  connectivity_plus: ^3.0.6
+  cached_network_image: ^3.2.3
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
