--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   shared_preferences: ^2.2.0
   connectivity_plus: ^3.0.6
   cached_network_image: ^3.2.3
-
+  equatable: ^2.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
